<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#482D28"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:background="#6D443C"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/quiz" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:cardBackgroundColor="#5B3933"
        app:cardCornerRadius="10dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="1."
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="#fff"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:text="Wait a few seconds !!" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/a"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/optionsRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/optionA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:text="wait"
                    android:background="@drawable/rounded_button"/>

                <RadioButton
                    android:id="@+id/optionB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:text="wait"
                    android:background="@drawable/rounded_button" />

                <RadioButton
                    android:id="@+id/optionC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:text="wait"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"/>

                <RadioButton
                    android:id="@+id/optionD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:text="wait"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button" />

            </RadioGroup>

        </LinearLayout>





    </LinearLayout>


    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center"/>

</LinearLayout>